# workshop-helper

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml
docs/adr/: 0001-local-browser-ui-foreground-process.md  0002-pure-python-applets-server-round-trip.md  0003-applets-are-folders-tags-not-hierarchy.md  0004-declarative-manifest-owns-input-schema.md  0005-applet-types-are-closed.md  0006-unit-is-a-display-label.md  0007-manifests-read-only-user-overrides-in-overlay.md
docs/authoring/: calculator-modes.md
docs/prototypes/: shell-ui-prototype.html
docs/research/: 22mm-calibration-surface.md  library-stack.md  pipe-bender-offset.md  pipe-bender-setback.md  thread-series-data.md
docs/spec/: host-framework.md
tests/: test_app.py  test_cli.py  test_discovery.py  test_home.py  test_lifecycle.py  test_workshop_utils.py
workshop_helper/: __init__.py  app.py  cli.py  discovery.py  home.py  lifecycle.py
workshop_helper/templates/: base.html  browse.html
workshop_utils/: __init__.py  _markdown.py
