[project]
name = "workshop-helper"
version = "0.1.0"
description = "A local-first framework for browsing and running small, pluggable reference tools."
readme = "CONTEXT.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "markdown-it-py==4.2.0",
]

[project.scripts]
workshop-helper = "workshop_helper.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Two top-level packages ship from one wheel (spec §7.1): the Host, and the
# only Host-owned name an Applet may import.
packages = ["workshop_helper", "workshop_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
